syntax = "proto3";

package protofiles;

import "google/api/annotations.proto";

option go_package = ".;protofiles";

message Address {
    string addrs_type = 1;
    string addrs_label = 2;
    string addrs_line_1 = 3;
    string addrs_line_2 = 4;
    string addrs_line_3 = 5;
    string city = 6;
    string state_name = 7;
    string country_name = 8;
    string pin = 9;
    string region = 10; 
}

message UserDataRequest {
    string token = 1;
}

message UserProfile {
    string user_name = 1;
    string user_login = 2;
    string cust_email = 3;
    string cust_mobile = 4;
    string addrs_type = 5;
    string addrs_label = 6;
    string addrs_line_1 = 7;
    string addrs_line_2 = 8;
    string addrs_line_3 = 9;
    string city = 10;
    string state_name = 11;
    string country_name = 12;
    string pin = 13;
    string region = 14;
}

message UserDataResponse {
    repeated UserProfile user_data = 1;
}

service UserDetail {
    rpc GetAllUserData(UserDataRequest) returns (UserDataResponse){
        option (google.api.http) = {
            get: "/v1/users/list_data"
        };
    };
}